--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
                 <ul class="footer_links">
                     <li><a href="#" class="footer_link">Register</a></li>
                     <li><a href="#" class="footer_link">Contact</a></li>
-                    <li><a href="../html/about.html" class="footer_link">About Us</a></li>
+                    <li><a href="./about.html" class="footer_link">About Us</a></li>
                 </ul>
             </div>
         </div>
