--- a/blog.html
+++ b/blog.html
@@ -9,16 +9,16 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
     <!--=============== SWIPER CSS ===============-->
-    <link rel="stylesheet" href="../css/swiper-bundle.min.css">
+    <link rel="stylesheet" class="js-color-style" href="../css/swiper-bundle.min.css">
 
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" class="js-color-style" href="../colors/color-1.css">
+    <link rel="stylesheet" href="../colors/color-1.css">
 
     <title>Responsive e-commerce website</title>
 </head>
 <body>
-    <!--=============== HEADER ===============--> 
+    <!--=============== HEADER ===============-->
     <header class="header" id="header">
         <nav class="nav container">
             <a href="./index.html" class="nav_logo">
@@ -40,7 +40,7 @@
                     </li>
 
                     <li class="nav_item">
-                        <a href="./blog.html" class="nav_link">Blog</a>
+                        <a href="./blog.html" class="nav_link active-link">Blog</a>
                     </li>
 
                     <li class="nav_item">
@@ -48,7 +48,7 @@
                     </li>
 
                     <li class="nav_item">
-                        <a href="./contact.html" class="nav_link active-link">Contact</a>
+                        <a href="./contact.html" class="nav_link">Contact</a>
                     </li>
                 </ul>
 
@@ -197,64 +197,64 @@
 
     <!--=============== MAIN ===============-->
     <main class="main">
-        <!--=============== CONTACT US ===============-->
-        <section class="contact section container">
-            <h2 class="breadcrumb_title">Contact Page</h2>
-            <h3 class="breadcrumb_subtitle"> Home > <span>Contact us</span> </h3>
+        <!--=============== BLOG ===============-->
+        <section class="blog section container">
+            <h2 class="breadcrumb_title">Blog Page</h2>
+            <h3 class="breadcrumb_subtitle"> Home > <span>Blog</span> </h3>
 
-            <div class="contact_container grid">
-                <div>
-                    <div class="contact_information">
-                        <i class="bx bx-phone contact_icon"></i>
-                        <div>
-                            <h3 class="contact_title">Call Me</h3>
-                            <span class="contact_subtitle">+91 957 98 24 911</span>
-                        </div>
-                    </div>
+            <div class="blog_container grid">
+                <div class="blog_post grid">
+                    <img src="../assets/blog-1.webp" alt="" class="blog_img">
 
-                    <div class="contact_information">
-                        <i class="bx bx-envelope contact_icon"></i>
-                        <div>
-                            <h3 class="contact_title">Email</h3>
-                            <span class="contact_subtitle">lokeshtarare2@gmail.com</span>
-                        </div>
-                    </div>
-
-                    <div class="contact_information">
-                        <i class="bx bx-map contact_icon"></i>
-                        <div>
-                            <h3 class="contact_title">Location</h3>
-                            <span class="contact_subtitle">Gandhi Chowk Nagardhan , Nagpur - India</span>
-                        </div>
+                    <div class="blog_info">
+                        <p class="blog_details">Explore the latest fashion trends, styling tips, and top brands for every season.</p>
+                            <h3 class="blog_title">From Now We Are Certified Web...</h3>
+                            <p class="blog_date">By Admin / Oct 22, 2024 / </p>
+                            <div class="read_more">
+                                <a href="#" class="button-link button-flex">Read More <i class="bx bx-right-arrow-alt button-icon"></i></a>
+                            </div>
                     </div>
                 </div>
 
-                <form action="" class="contact_form grid">
-                    <div class="contact_inputs grid">
-                        <div class="contact_content">
-                            <label for="" class="contact_label">Name</label>
-                            <input type="text" class="contact_input">
-                        </div>
-                        <div class="contact_content">
-                            <label for="" class="contact_label">Email</label>
-                            <input type="email" class="contact_input">
-                        </div>
-                    </div>
+                <div class="blog_post grid">
+                    <img src="../assets/blog-2.webp" alt="" class="blog_img">
 
-                    <div class="contact_content">
-                        <label for="" class="contact_label">Subject</label>
-                        <input type="text" class="contact_input">
+                    <div class="blog_info">
+                        <p class="blog_details">Uncover top fashion trends, styling tips, and must-have wardrobe essentials for every 
+                            season.</p>
+                            <h3 class="blog_title">From Now We Are Certified Web...</h3>
+                            <p class="blog_date">By Admin / Oct 22, 2024 / </p>
+                            <div class="read_more">
+                                <a href="#" class="button-link button-flex">Read More <i class="bx bx-right-arrow-alt button-icon"></i></a>
+                            </div>
                     </div>
+                </div>
 
-                    <div class="contact_content">
-                        <label for="" class="contact_label">Message</label>
-                        <textarea name="" id="" cols="0" rows="7" class="contact_input"></textarea>
-                    </div>
+                <div class="blog_post grid">
+                    <img src="../assets/blog-1.webp" alt="" class="blog_img">
 
-                    <div>
-                        <a href="#" class="button">Send Message</a>
+                    <div class="blog_info">
+                        <p class="blog_details">Discover fashion trends, styling tips, must-have pieces, and top brands to elevate 
+                            your wardrobe.</p>
+                            <h3 class="blog_title">From Now We Are Certified Web...</h3>
+                            <p class="blog_date">By Admin / Oct 22, 2024 / </p>
+                            <div class="read_more">
+                                <a href="#" class="button-link button-flex">Read More <i class="bx bx-right-arrow-alt button-icon"></i></a>
+                            </div>
                     </div>
-                </form>
+                </div>
+            </div>
+
+            <div class="pagination">
+                <i class="bx bx-chevron-left pagination-icon"></i>
+
+                <span class="current">1</span>
+                <span>2</span>
+                <span>3</span>
+                <span>&middot; &middot; &middot;</span>
+                <span>9</span>
+
+                <i class="bx bx-chevron-right pagination-icon"></i>
             </div>
         </section>
     </main>
@@ -303,7 +303,7 @@
                 <ul class="footer_links">
                     <li><a href="#" class="footer_link">Register</a></li>
                     <li><a href="#" class="footer_link">Contact</a></li>
-                    <li><a href="../html/about.html" class="footer_link">About Us</a></li>
+                    <li><a href="./about.html" class="footer_link">About Us</a></li>
                 </ul>
             </div>
         </div>
