--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <!--=============== BOXICONS ===============-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
-    <!-- =============== SWIPER CSS =============== -->
+    <!--=============== SWIPER CSS ===============-->
     <link rel="stylesheet" href="../css/swiper-bundle.min.css">
 
     <!--=============== CSS ===============-->
@@ -18,7 +18,7 @@
     <title>Responsive e-commerce website</title>
 </head>
 <body>
-    <!--=============== HEADER ===============-->
+    <!--=============== HEADER ===============--> 
     <header class="header" id="header">
         <nav class="nav container">
             <a href="./index.html" class="nav_logo">
@@ -32,7 +32,7 @@
                     </li>
 
                     <li class="nav_item">
-                        <a href="./shop.html" class="nav_link active-link">Shop</a>
+                        <a href="./shop.html" class="nav_link">Shop</a>
                     </li>
 
                     <li class="nav_item">
@@ -48,7 +48,7 @@
                     </li>
 
                     <li class="nav_item">
-                        <a href="./contact.html" class="nav_link">Contact</a>
+                        <a href="./contact.html" class="nav_link active-link">Contact</a>
                     </li>
                 </ul>
 
@@ -197,200 +197,64 @@
 
     <!--=============== MAIN ===============-->
     <main class="main">
-        <!--=============== SHOP ===============-->
-        <section class="shop section container">
-            <h2 class="breadcrumb_title">Shop Page</h2>
-            <h3 class="breadcrumb_subtitle"> Home > <span>Shop</span> </h3>
+        <!--=============== CONTACT US ===============-->
+        <section class="contact section container">
+            <h2 class="breadcrumb_title">Contact Page</h2>
+            <h3 class="breadcrumb_subtitle"> Home > <span>Contact us</span> </h3>
 
-            <div class="shop_container grid">
-                <div class="sidebar">
-                    <h3 class="filter_title">Select Filter</h3>
-                    <div class="filter_content">
-                        <h3 class="filter_subtitle">Condition</h3>
-
-                        <div class="filter">
-                            <input type="checkbox" name="" id="">
-                            <p>New</p> <span>(13)</span>
-                        </div>
-                        <div class="filter">
-                            <input type="checkbox" name="" id="">
-                            <p>Sale</p> <span>(13)</span>
+            <div class="contact_container grid">
+                <div>
+                    <div class="contact_information">
+                        <i class="bx bx-phone contact_icon"></i>
+                        <div>
+                            <h3 class="contact_title">Call Me</h3>
+                            <span class="contact_subtitle">+91 957 98 24 911</span>
                         </div>
                     </div>
 
-                    <div class="filter_content">
-                        <h3 class="filter_subtitle">Size</h3>
-
-                        <div class="filter">
-                            <input type="checkbox" name="" id="">
-                            <p>s</p> <span>(13)</span>
-                        </div>
-                        <div class="filter">
-                            <input type="checkbox" name="" id="">
-                            <p>M</p> <span>(15)</span>
-                        </div>
-                        <div class="filter">
-                            <input type="checkbox" name="" id="">
-                            <p>L</p> <span>(6)</span>
+                    <div class="contact_information">
+                        <i class="bx bx-envelope contact_icon"></i>
+                        <div>
+                            <h3 class="contact_title">Email</h3>
+                            <span class="contact_subtitle">lokeshtarare2@gmail.com</span>
                         </div>
                     </div>
 
-                    <div class="filter_content">
-                        <h3 class="filter_subtitle">Categories</h3>
-
-                        <div class="filter">
-                            <input type="checkbox" name="" id="">
-                            <p>Men</p> <span>(2)</span>
-                        </div>
-                        <div class="filter">
-                            <input type="checkbox" name="" id="">
-                            <p>Women</p> <span>(4)</span>
-                        </div>
-                        <div class="filter">
-                            <input type="checkbox" name="" id="">
-                            <p>Kids</p> <span>(6)</span>
-                        </div>
-                        <div class="filter">
-                            <input type="checkbox" name="" id="">
-                            <p>Others</p> <span>(4)</span>
+                    <div class="contact_information">
+                        <i class="bx bx-map contact_icon"></i>
+                        <div>
+                            <h3 class="contact_title">Location</h3>
+                            <span class="contact_subtitle">Gandhi Chowk Nagardhan , Nagpur - India</span>
                         </div>
                     </div>
-
-                    <div class="filter_content">
-                        <h3 class="filter_subtitle">Styles</h3>
-
-                        <div class="filter">
-                            <input type="checkbox" name="" id="">
-                            <p>Casual</p> <span>(2)</span>
-                        </div>
-                        <div class="filter">
-                            <input type="checkbox" name="" id="">
-                            <p>Dress</p> <span>(4)</span>
-                        </div>
-                        <div class="filter">
-                            <input type="checkbox" name="" id="">
-                            <p>Girly</p> <span>(6)</span>
-                        </div>
-                    </div>
-
-                    <div class="filter_content">
-                        <h3 class="filter_subtitle">Sub Categories</h3>
-
-                        <div class="filter">
-                            <input type="checkbox" name="" id="">
-                            <p>Jackets</p> <span>(2)</span>
-                        </div>
-                        <div class="filter">
-                            <input type="checkbox" name="" id="">
-                            <p>T-shirt</p> <span>(4)</span>
-                        </div>
-                        <div class="filter">
-                            <input type="checkbox" name="" id="">
-                            <p>Accessories</p> <span>(6)</span>
-                        </div>
-                        <div class="filter">
-                            <input type="checkbox" name="" id="">
-                            <p>Shoes</p> <span>(4)</span>
-                        </div>
-                        <div class="filter">
-                            <input type="checkbox" name="" id="">
-                            <p>Coats</p> <span>(4)</span>
-                        </div>
-                    </div>
-
                 </div>
 
-                <div class="shop_items grid">
-                    <div class="shop_content">
-                        <div class="shop_tag">New</div>
-                        <img src="../assets/product-1.png" alt="" class="shop_img">
-                        <h3 class="shop_title">Fur Jacket</h3>
-                        <span class="shop_subtitle">Accessory</span>
-
-                        <div class="shop_prices">
-                            <span class="shop_price">$14.99</span>
-                            <span class="shop_discounts">$29.99</span>
+                <form action="" class="contact_form grid">
+                    <div class="contact_inputs grid">
+                        <div class="contact_content">
+                            <label for="" class="contact_label">Name</label>
+                            <input type="text" class="contact_input">
                         </div>
-                        <a href="./details.html" class="button shop_button"><i class="bx bx-cart-alt shop_icon"></i></a>
+                        <div class="contact_content">
+                            <label for="" class="contact_label">Email</label>
+                            <input type="email" class="contact_input">
+                        </div>
                     </div>
 
-                    <div class="shop_content">
-                        <div class="shop_tag">Sale</div>
-                        <img src="../assets/product-2.png" alt="" class="shop_img">
-                        <h3 class="shop_title">Fleece Jacket</h3>
-                        <span class="shop_subtitle">Accessory</span>
-
-                        <div class="shop_prices">
-                            <span class="shop_price">$11.99</span>
-                            <span class="shop_discounts">$21.99</span>
-                        </div>
-                        <a href="./details.html" class="button shop_button"><i class="bx bx-cart-alt shop_icon"></i></a>
+                    <div class="contact_content">
+                        <label for="" class="contact_label">Subject</label>
+                        <input type="text" class="contact_input">
                     </div>
 
-                    <div class="shop_content">
-                        <div class="shop_tag">Sale</div>
-                        <img src="../assets/product-3.png" alt="" class="shop_img">
-                        <h3 class="shop_title">Cartoon Jacket</h3>
-                        <span class="shop_subtitle">Accessory</span>
-
-                        <div class="shop_prices">
-                            <span class="shop_price">$5.99</span>
-                            <span class="shop_discounts">$12.99</span>
-                        </div>
-                        <a href="./details.html" class="button shop_button"><i class="bx bx-cart-alt shop_icon"></i></a>
+                    <div class="contact_content">
+                        <label for="" class="contact_label">Message</label>
+                        <textarea name="" id="" cols="0" rows="7" class="contact_input"></textarea>
                     </div>
 
-                    <div class="shop_content">
-                        <div class="shop_tag">New</div>
-                        <img src="../assets/product-4.png" alt="" class="shop_img">
-                        <h3 class="shop_title">Clothing Hat Coat</h3>
-                        <span class="shop_subtitle">Accessory</span>
-
-                        <div class="shop_prices">
-                            <span class="shop_price">$7.99</span>
-                            <span class="shop_discounts">$14.99</span>
-                        </div>
-                        <a href="./details.html" class="button shop_button"><i class="bx bx-cart-alt shop_icon"></i></a>
+                    <div>
+                        <a href="#" class="button">Send Message</a>
                     </div>
-
-                    <div class="shop_content">
-                        <div class="shop_tag">New</div>
-                        <img src="../assets/product-5.png" alt="" class="shop_img">
-                        <h3 class="shop_title">Windbreaker Jacket</h3>
-                        <span class="shop_subtitle">Accessory</span>
-
-                        <div class="shop_prices">
-                            <span class="shop_price">$7.99</span>
-                            <span class="shop_discounts">$14.99</span>
-                        </div>
-                        <a href="./details.html" class="button shop_button"><i class="bx bx-cart-alt shop_icon"></i></a>
-                    </div>
-
-                    <div class="shop_content">
-                        <div class="shop_tag">Sale</div>
-                        <img src="../assets/product-6.png" alt="" class="shop_img">
-                        <h3 class="shop_title">Addidas Tracksuit</h3>
-                        <span class="shop_subtitle">Accessory</span>
-
-                        <div class="shop_prices">
-                            <span class="shop_price">$14.99</span>
-                            <span class="shop_discounts">$29.99</span>
-                        </div>
-                        <a href="./details.html" class="button shop_button"><i class="bx bx-cart-alt shop_icon"></i></a>
-                    </div>
-                </div> 
-            </div>
-            
-            <div class="pagination">
-                <i class="bx bx-chevron-left pagination-icon"></i>
-
-                <span class="current">1</span>
-                <span>2</span>
-                <span>3</span>
-                <span>&middot; &middot; &middot;</span>
-                <span>9</span>
-
-                <i class="bx bx-chevron-right pagination-icon"></i>
+                </form>
             </div>
         </section>
     </main>
@@ -439,7 +303,7 @@
                 <ul class="footer_links">
                     <li><a href="#" class="footer_link">Register</a></li>
                     <li><a href="#" class="footer_link">Contact</a></li>
-                    <li><a href="../html/about.html" class="footer_link">About Us</a></li>
+                    <li><a href="./about.html" class="footer_link">About Us</a></li>
                 </ul>
             </div>
         </div>
