--- a/shop.html
+++ b/shop.html
@@ -8,7 +8,7 @@
     <!--=============== BOXICONS ===============-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
-    <!--=============== SWIPER CSS ===============-->
+    <!-- =============== SWIPER CSS =============== -->
     <link rel="stylesheet" href="../css/swiper-bundle.min.css">
 
     <!--=============== CSS ===============-->
@@ -16,7 +16,7 @@
     <link rel="stylesheet" class="js-color-style" href="../colors/color-1.css">
 
     <title>Responsive e-commerce website</title>
-</head> 
+</head>
 <body>
     <!--=============== HEADER ===============-->
     <header class="header" id="header">
@@ -32,7 +32,7 @@
                     </li>
 
                     <li class="nav_item">
-                        <a href="./shop.html" class="nav_link">Shop</a>
+                        <a href="./shop.html" class="nav_link active-link">Shop</a>
                     </li>
 
                     <li class="nav_item">
@@ -44,7 +44,7 @@
                     </li>
 
                     <li class="nav_item">
-                        <a href="./faq.html" class="nav_link active-link">Faq's</a>
+                        <a href="./faq.html" class="nav_link">Faq's</a>
                     </li>
 
                     <li class="nav_item">
@@ -197,102 +197,200 @@
 
     <!--=============== MAIN ===============-->
     <main class="main">
-        <!--=============== FAQ'S ===============-->
-        <section class="questions section container">
-            <h2 class="breadcrumb_title">FAQ'S Page</h2>
-            <h3 class="breadcrumb_subtitle"> Home > <span>FAQ'S</span> </h3>
+        <!--=============== SHOP ===============-->
+        <section class="shop section container">
+            <h2 class="breadcrumb_title">Shop Page</h2>
+            <h3 class="breadcrumb_subtitle"> Home > <span>Shop</span> </h3>
 
-            <div class="questions_container grid">
-                <div class="questions_group">
-                    <div class="questions_items">
-                        <header class="questions_header">
-                            <i class="bx bx-plus questions_icon"></i>
-                            <h3 class="questions_items-title">How can I track my order?</h3>
-                        </header>
+            <div class="shop_container grid">
+                <div class="sidebar">
+                    <h3 class="filter_title">Select Filter</h3>
+                    <div class="filter_content">
+                        <h3 class="filter_subtitle">Condition</h3>
 
-                        <div class="questions_content">
-                            <p class="questions_description">
-                                Once your order has shipped, you'll receive an email with a tracking number. 
-                                You can use this number on our website or the carrier's site to track your package.
-                            </p>
+                        <div class="filter">
+                            <input type="checkbox" name="" id="">
+                            <p>New</p> <span>(13)</span>
+                        </div>
+                        <div class="filter">
+                            <input type="checkbox" name="" id="">
+                            <p>Sale</p> <span>(13)</span>
                         </div>
                     </div>
 
-                    <div class="questions_items">
-                        <header class="questions_header">
-                            <i class="bx bx-plus questions_icon"></i>
-                            <h3 class="questions_items-title">What are your shipping options and costs?</h3>
-                        </header>
+                    <div class="filter_content">
+                        <h3 class="filter_subtitle">Size</h3>
 
-                        <div class="questions_content">
-                            <p class="questions_description">
-                                We offer standard and expedited shipping. Standard shipping is free on orders over $50. 
-                                Expedited shipping costs vary depending on your location and will be calculated at checkout. 
-                            </p>
+                        <div class="filter">
+                            <input type="checkbox" name="" id="">
+                            <p>s</p> <span>(13)</span>
+                        </div>
+                        <div class="filter">
+                            <input type="checkbox" name="" id="">
+                            <p>M</p> <span>(15)</span>
+                        </div>
+                        <div class="filter">
+                            <input type="checkbox" name="" id="">
+                            <p>L</p> <span>(6)</span>
                         </div>
                     </div>
 
-                    <div class="questions_items">
-                        <header class="questions_header">
-                            <i class="bx bx-plus questions_icon"></i>
-                            <h3 class="questions_items-title">What is your return policy?</h3>
-                        </header>
+                    <div class="filter_content">
+                        <h3 class="filter_subtitle">Categories</h3>
 
-                        <div class="questions_content">
-                            <p class="questions_description">
-                                We accept returns within 30 days of purchase. Items must be unworn, unwashed, and in their 
-                                original packaging. Sale items are final and cannot be returned.
-                            </p>
+                        <div class="filter">
+                            <input type="checkbox" name="" id="">
+                            <p>Men</p> <span>(2)</span>
+                        </div>
+                        <div class="filter">
+                            <input type="checkbox" name="" id="">
+                            <p>Women</p> <span>(4)</span>
+                        </div>
+                        <div class="filter">
+                            <input type="checkbox" name="" id="">
+                            <p>Kids</p> <span>(6)</span>
+                        </div>
+                        <div class="filter">
+                            <input type="checkbox" name="" id="">
+                            <p>Others</p> <span>(4)</span>
+                        </div>
+                    </div>
+
+                    <div class="filter_content">
+                        <h3 class="filter_subtitle">Styles</h3>
+
+                        <div class="filter">
+                            <input type="checkbox" name="" id="">
+                            <p>Casual</p> <span>(2)</span>
+                        </div>
+                        <div class="filter">
+                            <input type="checkbox" name="" id="">
+                            <p>Dress</p> <span>(4)</span>
+                        </div>
+                        <div class="filter">
+                            <input type="checkbox" name="" id="">
+                            <p>Girly</p> <span>(6)</span>
+                        </div>
+                    </div>
+
+                    <div class="filter_content">
+                        <h3 class="filter_subtitle">Sub Categories</h3>
+
+                        <div class="filter">
+                            <input type="checkbox" name="" id="">
+                            <p>Jackets</p> <span>(2)</span>
+                        </div>
+                        <div class="filter">
+                            <input type="checkbox" name="" id="">
+                            <p>T-shirt</p> <span>(4)</span>
+                        </div>
+                        <div class="filter">
+                            <input type="checkbox" name="" id="">
+                            <p>Accessories</p> <span>(6)</span>
+                        </div>
+                        <div class="filter">
+                            <input type="checkbox" name="" id="">
+                            <p>Shoes</p> <span>(4)</span>
+                        </div>
+                        <div class="filter">
+                            <input type="checkbox" name="" id="">
+                            <p>Coats</p> <span>(4)</span>
                         </div>
                     </div>
 
                 </div>
 
-                <div class="questions_group">
-                    <div class="questions_items">
-                        <header class="questions_header">
-                            <i class="bx bx-plus questions_icon"></i>
-                            <h3 class="questions_items-title">Do you offer gift cards?</h3>
-                        </header>
+                <div class="shop_items grid">
+                    <div class="shop_content">
+                        <div class="shop_tag">New</div>
+                        <img src="../assets/product-1.png" alt="" class="shop_img">
+                        <h3 class="shop_title">Fur Jacket</h3>
+                        <span class="shop_subtitle">Accessory</span>
 
-                        <div class="questions_content">
-                            <p class="questions_description">
-                                Yes, we offer electronic gift cards in various amounts. They can be purchased 
-                                on our website and are delivered via email.
-                            </p>
+                        <div class="shop_prices">
+                            <span class="shop_price">$14.99</span>
+                            <span class="shop_discounts">$29.99</span>
                         </div>
+                        <a href="./details.html" class="button shop_button"><i class="bx bx-cart-alt shop_icon"></i></a>
                     </div>
 
-                    <div class="questions_items">
-                        <header class="questions_header">
-                            <i class="bx bx-plus questions_icon"></i>
-                            <h3 class="questions_items-title">How can I contact customer service?</h3>
-                        </header>
+                    <div class="shop_content">
+                        <div class="shop_tag">Sale</div>
+                        <img src="../assets/product-2.png" alt="" class="shop_img">
+                        <h3 class="shop_title">Fleece Jacket</h3>
+                        <span class="shop_subtitle">Accessory</span>
 
-                        <div class="questions_content">
-                            <p class="questions_description">
-                                You can contact our customer service team via email at support@clothingwebsite.com, or by 
-                                phone at 1-800-123-4567. We're available Monday to Friday, 9 AM to 5 PM EST.
-                            </p>
+                        <div class="shop_prices">
+                            <span class="shop_price">$11.99</span>
+                            <span class="shop_discounts">$21.99</span>
                         </div>
+                        <a href="./details.html" class="button shop_button"><i class="bx bx-cart-alt shop_icon"></i></a>
                     </div>
 
-                    <div class="questions_items">
-                        <header class="questions_header">
-                            <i class="bx bx-plus questions_icon"></i>
-                            <h3 class="questions_items-title">How do I create an account?</h3>
-                        </header>
+                    <div class="shop_content">
+                        <div class="shop_tag">Sale</div>
+                        <img src="../assets/product-3.png" alt="" class="shop_img">
+                        <h3 class="shop_title">Cartoon Jacket</h3>
+                        <span class="shop_subtitle">Accessory</span>
 
-                        <div class="questions_content">
-                            <p class="questions_description">
-                                You can create an account by clicking the "Sign Up" button at the top of our homepage. 
-                                Fill in your details, and you'll be ready to shop with us.
-                            </p>
+                        <div class="shop_prices">
+                            <span class="shop_price">$5.99</span>
+                            <span class="shop_discounts">$12.99</span>
                         </div>
+                        <a href="./details.html" class="button shop_button"><i class="bx bx-cart-alt shop_icon"></i></a>
                     </div>
 
-                </div>
+                    <div class="shop_content">
+                        <div class="shop_tag">New</div>
+                        <img src="../assets/product-4.png" alt="" class="shop_img">
+                        <h3 class="shop_title">Clothing Hat Coat</h3>
+                        <span class="shop_subtitle">Accessory</span>
 
+                        <div class="shop_prices">
+                            <span class="shop_price">$7.99</span>
+                            <span class="shop_discounts">$14.99</span>
+                        </div>
+                        <a href="./details.html" class="button shop_button"><i class="bx bx-cart-alt shop_icon"></i></a>
+                    </div>
+
+                    <div class="shop_content">
+                        <div class="shop_tag">New</div>
+                        <img src="../assets/product-5.png" alt="" class="shop_img">
+                        <h3 class="shop_title">Windbreaker Jacket</h3>
+                        <span class="shop_subtitle">Accessory</span>
+
+                        <div class="shop_prices">
+                            <span class="shop_price">$7.99</span>
+                            <span class="shop_discounts">$14.99</span>
+                        </div>
+                        <a href="./details.html" class="button shop_button"><i class="bx bx-cart-alt shop_icon"></i></a>
+                    </div>
+
+                    <div class="shop_content">
+                        <div class="shop_tag">Sale</div>
+                        <img src="../assets/product-6.png" alt="" class="shop_img">
+                        <h3 class="shop_title">Addidas Tracksuit</h3>
+                        <span class="shop_subtitle">Accessory</span>
+
+                        <div class="shop_prices">
+                            <span class="shop_price">$14.99</span>
+                            <span class="shop_discounts">$29.99</span>
+                        </div>
+                        <a href="./details.html" class="button shop_button"><i class="bx bx-cart-alt shop_icon"></i></a>
+                    </div>
+                </div> 
+            </div>
+            
+            <div class="pagination">
+                <i class="bx bx-chevron-left pagination-icon"></i>
+
+                <span class="current">1</span>
+                <span>2</span>
+                <span>3</span>
+                <span>&middot; &middot; &middot;</span>
+                <span>9</span>
+
+                <i class="bx bx-chevron-right pagination-icon"></i>
             </div>
         </section>
     </main>
@@ -341,7 +439,7 @@
                 <ul class="footer_links">
                     <li><a href="#" class="footer_link">Register</a></li>
                     <li><a href="#" class="footer_link">Contact</a></li>
-                    <li><a href="../html/about.html" class="footer_link">About Us</a></li>
+                    <li><a href="./about.html" class="footer_link">About Us</a></li>
                 </ul>
             </div>
         </div>
