change file name

--- a/blog.html
+++ b/blog.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
     <!--=============== SWIPER CSS ===============-->
-    <link rel="stylesheet" class="js-color-style" href="../css/swiper-bundle.min.css">
+    <link rel="stylesheet" class="js-color-style" href="./css/swiper-bundle.min.css">
 
     <!--=============== CSS ===============-->
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../colors/color-1.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" class="js-color-style" href="./colors/color-1.css">
 
     <title>Responsive e-commerce website</title>
 </head>
@@ -74,7 +74,7 @@
     </header>
 
     <!--=============== CART ===============-->
-    <div class="cart" id="cart">
+    <div class="cart" id="cart">`
         <i class="bx bx-x cart_close" id="cart-close"></i>
 
         <h2 class="cart_title-center">My Cart</h2>
@@ -82,7 +82,7 @@
         <div class="cart_container">
             <article class="cart_card">
                 <div class="cart_box">
-                    <img src="../assets/cart-1.png" alt="" class="cart_img">
+                    <img src="./assets/cart-1.png" alt="" class="cart_img">
                 </div>
 
                 <div class="cart_details">
@@ -109,7 +109,7 @@
 
             <article class="cart_card">
                 <div class="cart_box">
-                    <img src="../assets/cart-2.png" alt="" class="cart_img">
+                    <img src="./assets/cart-2.png" alt="" class="cart_img">
                 </div>
 
                 <div class="cart_details">
@@ -136,7 +136,7 @@
 
             <article class="cart_card">
                 <div class="cart_box">
-                    <img src="../assets/cart-3.png" alt="" class="cart_img">
+                    <img src="./assets/cart-3.png" alt="" class="cart_img">
                 </div>
 
                 <div class="cart_details">
@@ -204,7 +204,7 @@
 
             <div class="blog_container grid">
                 <div class="blog_post grid">
-                    <img src="../assets/blog-1.webp" alt="" class="blog_img">
+                    <img src="./assets/blog-1.webp" alt="" class="blog_img">
 
                     <div class="blog_info">
                         <p class="blog_details">Explore the latest fashion trends, styling tips, and top brands for every season.</p>
@@ -217,7 +217,7 @@
                 </div>
 
                 <div class="blog_post grid">
-                    <img src="../assets/blog-2.webp" alt="" class="blog_img">
+                    <img src="./assets/blog-2.webp" alt="" class="blog_img">
 
                     <div class="blog_info">
                         <p class="blog_details">Uncover top fashion trends, styling tips, and must-have wardrobe essentials for every 
@@ -231,7 +231,7 @@
                 </div>
 
                 <div class="blog_post grid">
-                    <img src="../assets/blog-1.webp" alt="" class="blog_img">
+                    <img src="./assets/blog-1.webp" alt="" class="blog_img">
 
                     <div class="blog_info">
                         <p class="blog_details">Discover fashion trends, styling tips, must-have pieces, and top brands to elevate 
@@ -334,9 +334,9 @@
     </div>
     
     <!--=============== SWIPER JS ===============-->
-    <script src="../js/swiper-bundle.min.js"></script>
+    <script src="./js/swiper-bundle.min.js"></script>
 
     <!--=============== JS ===============-->
-    <script src="../js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
