--- a/cart.html
+++ b/cart.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
     <!--=============== SWIPER CSS ===============-->
-    <link rel="stylesheet" href="../css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="./css/swiper-bundle.min.css">
 
     <!--=============== CSS ===============-->
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" class="js-color-style" href="../colors/color-1.css"> 
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" class="js-color-style" href="./colors/color-1.css"> 
 
-    <title>Responsive e-commerce website - Crypticalcoder</title>
+    <title>Responsive e-commerce website</title>
 </head>
 <body>
     <!--=============== HEADER ===============-->
@@ -66,9 +66,9 @@
     </div>
     
     <!--=============== SWIPER JS ===============-->
-    <script src="../js/swiper-bundle.min.js"></script>
+    <script src="./js/swiper-bundle.min.js"></script>
 
     <!--=============== JS ===============-->
-    <script src="../js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
