--- a/details.html
+++ b/details.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
     <!--=============== SWIPER CSS ===============-->
-    <link rel="stylesheet" href="../css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="./css/swiper-bundle.min.css">
 
     <!--=============== CSS ===============-->
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" class="js-color-style" href="../colors/color-1.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" class="js-color-style" href="./colors/color-1.css">
 
     <title>Responsive e-commerce website</title>
 </head>
@@ -82,7 +82,7 @@
         <div class="cart_container">
             <article class="cart_card">
                 <div class="cart_box">
-                    <img src="../assets/cart-1.png" alt="" class="cart_img">
+                    <img src="./assets/cart-1.png" alt="" class="cart_img">
                 </div>
 
                 <div class="cart_details">
@@ -109,7 +109,7 @@
 
             <article class="cart_card">
                 <div class="cart_box">
-                    <img src="../assets/cart-2.png" alt="" class="cart_img">
+                    <img src="./assets/cart-2.png" alt="" class="cart_img">
                 </div>
 
                 <div class="cart_details">
@@ -136,7 +136,7 @@
 
             <article class="cart_card">
                 <div class="cart_box">
-                    <img src="../assets/cart-3.png" alt="" class="cart_img">
+                    <img src="./assets/cart-3.png" alt="" class="cart_img">
                 </div>
 
                 <div class="cart_details">
@@ -206,16 +206,16 @@
                 <div class="product_images grid">
                     <div class="product_img">
                         <div class="details_img-tag">New</div>
-                        <img src="../assets/details-1.png" alt="">
+                        <img src="./assets/details-1.png" alt="">
                     </div>
                     <div class="product_img">
-                        <img src="../assets/details-2.png" alt="">
+                        <img src="./assets/details-2.png" alt="">
                     </div>
                     <div class="product_img">
-                        <img src="../assets/details-3.png" alt="">
+                        <img src="./assets/details-3.png" alt="">
                     </div>
                     <div class="product_img">
-                        <img src="../assets/details-4.png" alt="">
+                        <img src="./assets/details-4.png" alt="">
                     </div>
                 </div>
 
@@ -279,7 +279,7 @@
                         <!-- NEW CONTENT 1 -->
                         <div class="new_content swiper-slide">
                             <div class="new_tag">New</div>
-                            <img src="../assets/new-1.png" alt="" class="new_img">
+                            <img src="./assets/new-1.png" alt="" class="new_img">
                             <h3 class="new_title">Windbreaker Jacket</h3>
                             <span class="new_subtitle">Accessory</span>
 
@@ -295,7 +295,7 @@
                         <!-- NEW CONTENT 2 -->
                         <div class="new_content swiper-slide">
                             <div class="new_tag">New</div>
-                            <img src="../assets/new-2.png" alt="" class="new_img">
+                            <img src="./assets/new-2.png" alt="" class="new_img">
                             <h3 class="new_title">Air Jordan Zipper</h3>
                             <span class="new_subtitle">Accessory</span>
 
@@ -311,7 +311,7 @@
                         <!-- NEW CONTENT 3 -->
                         <div class="new_content swiper-slide">
                             <div class="new_tag">New</div>
-                            <img src="../assets/new-3.png" alt="" class="new_img">
+                            <img src="./assets/new-3.png" alt="" class="new_img">
                             <h3 class="new_title">Fur Jacket</h3>
                             <span class="new_subtitle">Accessory</span>
 
@@ -327,7 +327,7 @@
                         <!-- NEW CONTENT 4 -->
                         <div class="new_content swiper-slide">
                             <div class="new_tag">New</div>
-                            <img src="../assets/new-4.png" alt="" class="new_img">
+                            <img src="./assets/new-4.png" alt="" class="new_img">
                             <h3 class="new_title">Fleece Jacket</h3>
                             <span class="new_subtitle">Accessory</span>
 
@@ -343,7 +343,7 @@
                         <!-- NEW CONTENT 5 -->
                         <div class="new_content swiper-slide">
                             <div class="new_tag">New</div>
-                            <img src="../assets/new-5.png" alt="" class="new_img">
+                            <img src="./assets/new-5.png" alt="" class="new_img">
                             <h3 class="new_title">Fleece Hoodie</h3>
                             <span class="new_subtitle">Accessory</span>
 
@@ -359,7 +359,7 @@
                         <!-- NEW CONTENT 6 -->
                         <div class="new_content swiper-slide">
                             <div class="new_tag">New</div>
-                            <img src="../assets/new-6.png" alt="" class="new_img">
+                            <img src="./assets/new-6.png" alt="" class="new_img">
                             <h3 class="new_title">Nike Hoodie</h3>
                             <span class="new_subtitle">Accessory</span>
 
@@ -435,7 +435,7 @@
     <div class="lightbox">
         <div class="lightbox_content">
             <div class="lightbox_close">&times;</div>
-            <img src="../assets/details-1.png" alt="" class="lightbox_img">
+            <img src="./assets/details-1.png" alt="" class="lightbox_img">
             <div class="lightbox_caption">
                 <div class="caption_text">e-shopping</div>
                 <div class="caption_counter"></div>
@@ -528,9 +528,9 @@
     </script>
 
     <!--=============== SWIPER JS ===============-->
-    <script src="../js/swiper-bundle.min.js"></script>
+    <script src="./js/swiper-bundle.min.js"></script>
 
     <!--=============== JS ===============-->
-    <script src="../js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
