--- a/shop.html
+++ b/shop.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
     <!-- =============== SWIPER CSS =============== -->
-    <link rel="stylesheet" href="../css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="./css/swiper-bundle.min.css">
 
     <!--=============== CSS ===============-->
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" class="js-color-style" href="../colors/color-1.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" class="js-color-style" href="./colors/color-1.css">
 
     <title>Responsive e-commerce website</title>
 </head>
@@ -82,7 +82,7 @@
         <div class="cart_container">
             <article class="cart_card">
                 <div class="cart_box">
-                    <img src="../assets/cart-1.png" alt="" class="cart_img">
+                    <img src="./assets/cart-1.png" alt="" class="cart_img">
                 </div>
 
                 <div class="cart_details">
@@ -109,7 +109,7 @@
 
             <article class="cart_card">
                 <div class="cart_box">
-                    <img src="../assets/cart-2.png" alt="" class="cart_img">
+                    <img src="./assets/cart-2.png" alt="" class="cart_img">
                 </div>
 
                 <div class="cart_details">
@@ -136,7 +136,7 @@
 
             <article class="cart_card">
                 <div class="cart_box">
-                    <img src="../assets/cart-3.png" alt="" class="cart_img">
+                    <img src="./assets/cart-3.png" alt="" class="cart_img">
                 </div>
 
                 <div class="cart_details">
@@ -303,7 +303,7 @@
                 <div class="shop_items grid">
                     <div class="shop_content">
                         <div class="shop_tag">New</div>
-                        <img src="../assets/product-1.png" alt="" class="shop_img">
+                        <img src="./assets/product-1.png" alt="" class="shop_img">
                         <h3 class="shop_title">Fur Jacket</h3>
                         <span class="shop_subtitle">Accessory</span>
 
@@ -316,7 +316,7 @@
 
                     <div class="shop_content">
                         <div class="shop_tag">Sale</div>
-                        <img src="../assets/product-2.png" alt="" class="shop_img">
+                        <img src="./assets/product-2.png" alt="" class="shop_img">
                         <h3 class="shop_title">Fleece Jacket</h3>
                         <span class="shop_subtitle">Accessory</span>
 
@@ -329,7 +329,7 @@
 
                     <div class="shop_content">
                         <div class="shop_tag">Sale</div>
-                        <img src="../assets/product-3.png" alt="" class="shop_img">
+                        <img src="./assets/product-3.png" alt="" class="shop_img">
                         <h3 class="shop_title">Cartoon Jacket</h3>
                         <span class="shop_subtitle">Accessory</span>
 
@@ -342,7 +342,7 @@
 
                     <div class="shop_content">
                         <div class="shop_tag">New</div>
-                        <img src="../assets/product-4.png" alt="" class="shop_img">
+                        <img src="./assets/product-4.png" alt="" class="shop_img">
                         <h3 class="shop_title">Clothing Hat Coat</h3>
                         <span class="shop_subtitle">Accessory</span>
 
@@ -355,7 +355,7 @@
 
                     <div class="shop_content">
                         <div class="shop_tag">New</div>
-                        <img src="../assets/product-5.png" alt="" class="shop_img">
+                        <img src="./assets/product-5.png" alt="" class="shop_img">
                         <h3 class="shop_title">Windbreaker Jacket</h3>
                         <span class="shop_subtitle">Accessory</span>
 
@@ -368,7 +368,7 @@
 
                     <div class="shop_content">
                         <div class="shop_tag">Sale</div>
-                        <img src="../assets/product-6.png" alt="" class="shop_img">
+                        <img src="./assets/product-6.png" alt="" class="shop_img">
                         <h3 class="shop_title">Addidas Tracksuit</h3>
                         <span class="shop_subtitle">Accessory</span>
 
@@ -470,9 +470,9 @@
     </div>
     
     <!--=============== SWIPER JS ===============-->
-    <script src="../js/swiper-bundle.min.js"></script>
+    <script src="./js/swiper-bundle.min.js"></script>
 
     <!--=============== JS ===============-->
-    <script src="../js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
