--- a/about.html
+++ b/about.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
     <!--=============== SWIPER CSS ===============-->
-    <link rel="stylesheet" href="../css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="./css/swiper-bundle.min.css">
 
     <!--=============== CSS ===============-->
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" class="js-color-style" href="../colors/color-1.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" class="js-color-style" href="./colors/color-1.css">
 
     <title>Responsive e-commerce website</title>
 </head>
@@ -82,7 +82,7 @@
         <div class="cart_container">
             <article class="cart_card">
                 <div class="cart_box">
-                    <img src="../assets/cart-1.png" alt="" class="cart_img">
+                    <img src="./assets/cart-1.png" alt="" class="cart_img">
                 </div>
 
                 <div class="cart_details">
@@ -109,7 +109,7 @@
 
             <article class="cart_card">
                 <div class="cart_box">
-                    <img src="../assets/cart-2.png" alt="" class="cart_img">
+                    <img src="./assets/cart-2.png" alt="" class="cart_img">
                 </div>
 
                 <div class="cart_details">
@@ -136,7 +136,7 @@
 
             <article class="cart_card">
                 <div class="cart_box">
-                    <img src="../assets/cart-3.png" alt="" class="cart_img">
+                    <img src="./assets/cart-3.png" alt="" class="cart_img">
                 </div>
 
                 <div class="cart_details">
@@ -203,7 +203,7 @@
             <h3 class="breadcrumb_subtitle"> Home > <span>About us</span> </h3>
 
             <div class="about_container grid">
-                <img src="../assets/about-img.jpg" alt="" class="about_img">
+                <img src="./assets/about-img.jpg" alt="" class="about_img">
 
                 <div class="about_data">
                     <h2 class="section_title about_title">
@@ -308,9 +308,9 @@
     </div>
     
     <!--=============== SWIPER JS ===============-->
-    <script src="../js/swiper-bundle.min.js"></script>
+    <script src="./js/swiper-bundle.min.js"></script>
 
     <!--=============== JS ===============-->
-    <script src="../js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
