--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
     <!--=============== SWIPER CSS ===============-->
-    <link rel="stylesheet" href="../css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="./css/swiper-bundle.min.css">
 
     <!--=============== CSS ===============-->
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" class="js-color-style" href="../colors/color-1.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" class="js-color-style" href="./colors/color-1.css">
 
     <title>Responsive e-commerce website</title>
 </head>
@@ -82,7 +82,7 @@
         <div class="cart_container">
             <article class="cart_card">
                 <div class="cart_box">
-                    <img src="../assets/cart-1.png" alt="" class="cart_img">
+                    <img src="./assets/cart-1.png" alt="" class="cart_img">
                 </div>
 
                 <div class="cart_details">
@@ -109,7 +109,7 @@
 
             <article class="cart_card">
                 <div class="cart_box">
-                    <img src="../assets/cart-2.png" alt="" class="cart_img">
+                    <img src="./assets/cart-2.png" alt="" class="cart_img">
                 </div>
 
                 <div class="cart_details">
@@ -136,7 +136,7 @@
 
             <article class="cart_card">
                 <div class="cart_box">
-                    <img src="../assets/cart-3.png" alt="" class="cart_img">
+                    <img src="./assets/cart-3.png" alt="" class="cart_img">
                 </div>
 
                 <div class="cart_details">
@@ -205,7 +205,7 @@
                     <section class="swiper-slide">
                         <div class="home_content grid">
                             <div class="home_group">
-                                <img src="../assets/slide-2.png" alt="" class="home_img">
+                                <img src="./assets/slide-2.png" alt="" class="home_img">
                                 <div class="home_indicator"></div>
 
                                 <div class="home_details-img">
@@ -233,7 +233,7 @@
                     <section class="swiper-slide">
                         <div class="home_content grid">
                             <div class="home_group">
-                                <img src="../assets/slide-3.png" alt="" class="home_img">
+                                <img src="./assets/slide-3.png" alt="" class="home_img">
                                 <div class="home_indicator"></div>
 
                                 <div class="home_details-img">
@@ -261,7 +261,7 @@
                     <section class="swiper-slide">
                         <div class="home_content grid">
                             <div class="home_group">
-                                <img src="../assets/slide-1.png" alt="" class="home_img">
+                                <img src="./assets/slide-1.png" alt="" class="home_img">
                                 <div class="home_indicator"></div>
 
                                 <div class="home_details-img">
@@ -293,7 +293,7 @@
         <!--=============== DISCOUNT ===============-->
         <section class="discount section">
             <div class="discount_container container grid">
-                <img src="../assets/discount.png" alt="" class="discount_img">
+                <img src="./assets/discount.png" alt="" class="discount_img">
 
                 <div class="discount_data">
                     <h2 class="discount_title">50% Discount <br> On New Products</h2>
@@ -312,7 +312,7 @@
                         <!-- NEW CONTENT 1 -->
                         <div class="new_content swiper-slide">
                             <div class="new_tag">New</div>
-                            <img src="../assets/new-1.png" alt="" class="new_img">
+                            <img src="./assets/new-1.png" alt="" class="new_img">
                             <h3 class="new_title">Windbreaker Jacket</h3>
                             <span class="new_subtitle">Accessory</span>
 
@@ -328,7 +328,7 @@
                         <!-- NEW CONTENT 2 -->
                         <div class="new_content swiper-slide">
                             <div class="new_tag">New</div>
-                            <img src="../assets/new-2.png" alt="" class="new_img">
+                            <img src="./assets/new-2.png" alt="" class="new_img">
                             <h3 class="new_title">Air Jordan Zipper</h3>
                             <span class="new_subtitle">Accessory</span>
 
@@ -344,7 +344,7 @@
                         <!-- NEW CONTENT 3 -->
                         <div class="new_content swiper-slide">
                             <div class="new_tag">New</div>
-                            <img src="../assets/new-3.png" alt="" class="new_img">
+                            <img src="./assets/new-3.png" alt="" class="new_img">
                             <h3 class="new_title">Fur Jacket</h3>
                             <span class="new_subtitle">Accessory</span>
 
@@ -360,7 +360,7 @@
                         <!-- NEW CONTENT 4 -->
                         <div class="new_content swiper-slide">
                             <div class="new_tag">New</div>
-                            <img src="../assets/new-4.png" alt="" class="new_img">
+                            <img src="./assets/new-4.png" alt="" class="new_img">
                             <h3 class="new_title">Fleece Jacket</h3>
                             <span class="new_subtitle">Accessory</span>
 
@@ -376,7 +376,7 @@
                         <!-- NEW CONTENT 5 -->
                         <div class="new_content swiper-slide">
                             <div class="new_tag">New</div>
-                            <img src="../assets/new-5.png" alt="" class="new_img">
+                            <img src="./assets/new-5.png" alt="" class="new_img">
                             <h3 class="new_title">Fleece Hoodie</h3>
                             <span class="new_subtitle">Accessory</span>
 
@@ -392,7 +392,7 @@
                         <!-- NEW CONTENT 6 -->
                         <div class="new_content swiper-slide">
                             <div class="new_tag">New</div>
-                            <img src="../assets/new-6.png" alt="" class="new_img">
+                            <img src="./assets/new-6.png" alt="" class="new_img">
                             <h3 class="new_title">Nike Hoodie</h3>
                             <span class="new_subtitle">Accessory</span>
 
@@ -537,9 +537,9 @@
     </div>
 
     <!--=============== SWIPER JS ===============-->
-    <script src="../js/swiper-bundle.min.js"></script>
+    <script src="./js/swiper-bundle.min.js"></script>
 
     <!--=============== JS ===============-->
-    <script src="../js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
